--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
         <h1 id="result">Average water consumption<br><div id="ayush"></div></h1>
     </div>
     <script src="main.js" defer></script>
+    <footer style="transform: translateY(-30vh);">
+        <p id="footer">Team Members: ADITHYA d , ADITYA KUMAR , ADITYA PRAKASH , AKASH K V , AVIRAL NIRGUN , AYUSH SINGH  </p>
+    </footer>
 </body>
 </html>
